# tauri-php

./: .gitignore  CHANGELOG.md  IMPLEMENTATION-STATUS.md  IOS-BUILD-QUICKSTART.md  LICENSE  README.md  composer.json  phpunit.xml
.github/workflows/: release.yml  tests.yml
config/: tauri-php.php
docs/: ICONS_AND_CONFIG.md  MOBILE_PLUGINS.md  MOBILE_PLUGINS_INTEGRATION.md  building.md  configuration.md  getting-started.md  installation.md  ios-laravel-config.md  ios-php-build.md  mobile.md  troubleshooting.md
icons/: README.md
patches/ios/: 001-disable-dns-search-ios.patch  004-disable-chdir-fork-ios.patch  004-disable-posix-spawn-addchdir-ios.patch  disable-chroot.patch  disable-dns-resolver.patch
routes/: tauri.php
scripts/: build-php-ios.sh
src/: TauriPhpServiceProvider.php
src/Console/: BuildCommand.php  CleanCommand.php  DevCommand.php  InitCommand.php  MobileDevCommand.php  MobileInitCommand.php  PackageCommand.php
src/Exceptions/: TauriPhpException.php
src/Facades/: Camera.php  Geolocation.php  Notification.php  Storage.php  TauriPhp.php  Vibration.php
src/Plugins/: Plugin.php  README.md
src/Services/: CodeObfuscator.php  EnvTauriManager.php  FrankenPhpBuilder.php  StubManager.php  TauriConfigGenerator.php  TauriPhpService.php
src/Traits/: RunsProcesses.php
stubs/: package.json
stubs/env/: embedded.env  tauri.env
stubs/examples/: MobilePluginExampleController.php  (+1 more)
stubs/tauri/src-tauri/: Cargo.toml
stubs/tauri/src-tauri/capabilities/: default.json
stubs/tauri/src-tauri/src/: lib.rs  main.rs
tests/: TestCase.php
(+24 files in other folders)
